--- a/webrtcdemo/src/main/resources/application.properties
+++ b/webrtcdemo/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 
-server.port=8080
+server.port=8443
+
+server.ssl.protocol=TLS
+server.ssl.key-store=classpath:server.keystore
+server.ssl.key-store-password=12345678
+server.ssl.key-store-type=JKS
